--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
         </dependency>
 
     </dependencies>
